
 - Separate $username and $password from DSN parameters in POD
   [Daniel Böhmer]
   (Github pull request #149)

 - Add example for using RETURNING in "insert into foo (...) returning id"
   [H.Merijn Brand]
   (Github pull request #134)

 - Do not use TMPDIR if we are providing a path via DBDPG_TEMDIR environment variable.
   [Greg Sabino Mullane]
   (RT ticket #157598)


Version 3.18.0 (released December 6, 2023)

 - Support new PQclosePrepared function, added in Postgres 17
   [Greg Sabino Mullane]

 - Better docs about ping always returning a value
   (Github issue #121)


Version 3.17.0  (released August 23, 2023)

 - New database handle attribute pg_skip_deallocate
   Prevents any deallocation of automatically prepared 
     statements to support new pgBouncer feature
   [Greg Sabino Mullane]

 - Fix to handle escaped quotes in connection string
   [Dagfinn Ilmari Mannsåker]

 - Return number of affected rows from a MERGE command
   [Greg Sabino Mullane]
   (Github issue #118)

 - Add support for Github CI actions
   [Gábor Szabó]
   (Github pull request #115)

 - Remove undocumented internal-only pg_pid_number attribute
   [Greg Sabino Mullane]
   (Github issue #102)

 - Small warning in docs about PG_CHAR
   [Greg Sabino Mullane]
   (Github issue #103)


Version 3.16.3  (released April 4, 2023)

 - Fix to remove MYMETA files added by mistake to tarball


Version 3.16.2  (released April 4, 2023)

 - Force test suite to use a specific shell for the initdb command
   [Ed Sabol]
   (Github issue #104)

 - Revert to using META.yml, and generate MYMETA.* files
   (Github issue #111)
   (Github issue #113)


Version 3.16.1  (released March 5, 2023)

 - Add new attribute "pg_int8_as_string", for backwards compatibility.
   [Alexander Gorlov]
   (Github pull request #100)

 - Add a META.json file; rename META.yml to META.yaml

 - Fix 03smethod.t $sth->last_insert_id skip count for DBI < 1.642
   [Dagfinn Ilmari Mannsåker]
   (Github issue #99)
